becoming one with data part3

--- a/03_introduction_to_computer_vision_wtih_tensorflow.ipynb
+++ b/03_introduction_to_computer_vision_wtih_tensorflow.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP4xcdEAgL8XuB0Myp7WEL2"
+      "authorship_tag": "ABX9TyPa951WbFJy539L/+2iX6un"
     },
     "kernelspec": {
       "name": "python3",
@@ -538,6 +538,108 @@
           },
           "metadata": {},
           "execution_count": 55
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# View the image shape\n",
+        "img.shape # returns width, height, colour channels"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Cc-XT6KeasAp",
+        "outputId": "0b690995-a5dc-4eb9-ad0b-388328b0f6d8"
+      },
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(384, 512, 3)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 56
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Get all the pixel values between 0 & 1\n",
+        "img/ 255."
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HowxeymebFNA",
+        "outputId": "c5b4e9ec-82a5-4b9e-b188-c36510b7de35"
+      },
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[[0.50588235, 0.57254902, 0.49803922],\n",
+              "        [0.5254902 , 0.60784314, 0.53333333],\n",
+              "        [0.55294118, 0.65882353, 0.59215686],\n",
+              "        ...,\n",
+              "        [0.00784314, 0.        , 0.00392157],\n",
+              "        [0.00784314, 0.        , 0.00392157],\n",
+              "        [0.00784314, 0.        , 0.00392157]],\n",
+              "\n",
+              "       [[0.49019608, 0.56078431, 0.49803922],\n",
+              "        [0.51372549, 0.60392157, 0.54117647],\n",
+              "        [0.54509804, 0.66666667, 0.60392157],\n",
+              "        ...,\n",
+              "        [0.00784314, 0.        , 0.00392157],\n",
+              "        [0.00784314, 0.        , 0.00392157],\n",
+              "        [0.00784314, 0.        , 0.00392157]],\n",
+              "\n",
+              "       [[0.50196078, 0.59607843, 0.54509804],\n",
+              "        [0.51764706, 0.62745098, 0.58039216],\n",
+              "        [0.54117647, 0.67058824, 0.62745098],\n",
+              "        ...,\n",
+              "        [0.00392157, 0.00392157, 0.00392157],\n",
+              "        [0.00392157, 0.00392157, 0.00392157],\n",
+              "        [0.00392157, 0.00392157, 0.00392157]],\n",
+              "\n",
+              "       ...,\n",
+              "\n",
+              "       [[0.5372549 , 0.74509804, 0.77647059],\n",
+              "        [0.53333333, 0.74117647, 0.77254902],\n",
+              "        [0.53333333, 0.74117647, 0.77254902],\n",
+              "        ...,\n",
+              "        [0.5372549 , 0.60392157, 0.52941176],\n",
+              "        [0.52941176, 0.6       , 0.51372549],\n",
+              "        [0.51764706, 0.58823529, 0.50196078]],\n",
+              "\n",
+              "       [[0.54901961, 0.74509804, 0.77254902],\n",
+              "        [0.54509804, 0.74117647, 0.76862745],\n",
+              "        [0.54117647, 0.7372549 , 0.76470588],\n",
+              "        ...,\n",
+              "        [0.50980392, 0.58431373, 0.50588235],\n",
+              "        [0.50980392, 0.58431373, 0.49803922],\n",
+              "        [0.49803922, 0.57254902, 0.48627451]],\n",
+              "\n",
+              "       [[0.54509804, 0.74117647, 0.76862745],\n",
+              "        [0.54117647, 0.7372549 , 0.76470588],\n",
+              "        [0.5372549 , 0.73333333, 0.76078431],\n",
+              "        ...,\n",
+              "        [0.47843137, 0.55294118, 0.4745098 ],\n",
+              "        [0.48627451, 0.56078431, 0.4745098 ],\n",
+              "        [0.47843137, 0.55294118, 0.46666667]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 57
         }
       ]
     }
