loading data with ImageDataGenerator part3 (117)

--- a/03_introduction_to_computer_vision_wtih_tensorflow.ipynb
+++ b/03_introduction_to_computer_vision_wtih_tensorflow.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOTrspRmRzfDhogPf7HdPD2"
+      "authorship_tag": "ABX9TyNwN217FmvRjdYphhYvCaSP"
     },
     "kernelspec": {
       "name": "python3",
@@ -1481,7 +1481,7 @@
         "## Binary Classificaiton: Let's break it down\n",
         "\n",
         "1. Become one with the data (visualize, visualize, visualize)\n",
-        "2. Preprocess the data (prepated it for our model, the main step here was scaling/normalizing)\n",
+        "2. Preprocess the data (prepated it for our model, the main step here was scaling/normalizing & turning our data into batches)\n",
         "3. Create a model (start with a baseline)\n",
         "4. Fit the model\n",
         "5. Evaluate the model\n",
@@ -1595,17 +1595,17 @@
       "metadata": {
         "id": "Yh3jP5iDj-uO"
       },
-      "execution_count": 30,
+      "execution_count": 33,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# Load in out image data from directories and turn them into batches\n",
-        "train_data = train_datagen.flow_from_directory(directory=train_dir,\n",
-        "                                               target_size=(224, 224),\n",
-        "                                               class_mode=\"binary\",\n",
-        "                                               batch_size=32)\n",
+        "train_data = train_datagen.flow_from_directory(directory=train_dir, # Traget directory of images\n",
+        "                                               target_size=(224, 224), # Traget size of images (height, width)\n",
+        "                                               class_mode=\"binary\", # type of data you're working with\n",
+        "                                               batch_size=32) # size of minibatches to load data into\n",
         "\n",
         "test_data = test_datagen.flow_from_directory(directory=test_dir,\n",
         "                                             target_size=(224, 224),\n",
@@ -1617,9 +1617,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YtsFidJzmWnk",
-        "outputId": "58698297-bce9-48f4-c7fd-00adf06825ea"
+        "outputId": "d0b96e7d-5796-4fa4-f7c6-a83afb6d4198"
       },
-      "execution_count": 31,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -1628,6 +1628,243 @@
             "Found 1500 images belonging to 2 classes.\n",
             "Found 500 images belonging to 2 classes.\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Get a sample of a train data batch\n",
+        "images, labels = train_data[0] # get the \"next\" batch of images/labels in train_data\n",
+        "len(images), len(labels)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yopxxGtaoD4s",
+        "outputId": "887079b4-d8b2-4666-a46f-aa1e1281b956"
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(32, 32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 36
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# How many batches are there?\n",
+        "len(train_data) # 1500/32"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VanuonDSonvH",
+        "outputId": "8ed58b5f-c125-4920-f7f7-181107c558fa"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "47"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 37
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Get the first two images\n",
+        "images[:2], images[0].shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "naSNMyzXo1rQ",
+        "outputId": "2e493d4b-566b-4f4f-f9d3-3a25f27f8b73"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(array([[[[0.56078434, 0.63529414, 0.79215693],\n",
+              "          [0.5647059 , 0.6392157 , 0.7960785 ],\n",
+              "          [0.5647059 , 0.6392157 , 0.80392164],\n",
+              "          ...,\n",
+              "          [0.07843138, 0.08235294, 0.05882353],\n",
+              "          [0.08235294, 0.08235294, 0.07450981],\n",
+              "          [0.09803922, 0.09803922, 0.09803922]],\n",
+              " \n",
+              "         [[0.5647059 , 0.6392157 , 0.7960785 ],\n",
+              "          [0.5568628 , 0.6313726 , 0.7960785 ],\n",
+              "          [0.5568628 , 0.6313726 , 0.7960785 ],\n",
+              "          ...,\n",
+              "          [0.09803922, 0.10196079, 0.07058824],\n",
+              "          [0.0627451 , 0.06666667, 0.04705883],\n",
+              "          [0.04313726, 0.04313726, 0.03529412]],\n",
+              " \n",
+              "         [[0.5686275 , 0.6431373 , 0.8078432 ],\n",
+              "          [0.5647059 , 0.6392157 , 0.80392164],\n",
+              "          [0.5647059 , 0.6392157 , 0.8078432 ],\n",
+              "          ...,\n",
+              "          [0.07450981, 0.07843138, 0.04705883],\n",
+              "          [0.15686275, 0.16078432, 0.13725491],\n",
+              "          [0.21568629, 0.21960786, 0.20000002]],\n",
+              " \n",
+              "         ...,\n",
+              " \n",
+              "         [[0.3921569 , 0.34901962, 0.22352943],\n",
+              "          [0.39607847, 0.3529412 , 0.23529413],\n",
+              "          [0.3372549 , 0.28235295, 0.1764706 ],\n",
+              "          ...,\n",
+              "          [0.5372549 , 0.5294118 , 0.5803922 ],\n",
+              "          [0.5372549 , 0.5294118 , 0.5803922 ],\n",
+              "          [0.53333336, 0.5254902 , 0.5764706 ]],\n",
+              " \n",
+              "         [[0.38431376, 0.34901962, 0.23529413],\n",
+              "          [0.34117648, 0.30588236, 0.19215688],\n",
+              "          [0.16862746, 0.12941177, 0.03137255],\n",
+              "          ...,\n",
+              "          [0.5372549 , 0.5294118 , 0.58431375],\n",
+              "          [0.5372549 , 0.5294118 , 0.58431375],\n",
+              "          [0.5411765 , 0.5254902 , 0.5803922 ]],\n",
+              " \n",
+              "         [[0.17254902, 0.14901961, 0.05490196],\n",
+              "          [0.22352943, 0.20000002, 0.10588236],\n",
+              "          [0.21176472, 0.18039216, 0.09019608],\n",
+              "          ...,\n",
+              "          [0.5254902 , 0.5137255 , 0.5803922 ],\n",
+              "          [0.5294118 , 0.5137255 , 0.57254905],\n",
+              "          [0.5294118 , 0.5137255 , 0.5686275 ]]],\n",
+              " \n",
+              " \n",
+              "        [[[0.31764707, 0.39607847, 0.5019608 ],\n",
+              "          [0.38431376, 0.46274513, 0.56078434],\n",
+              "          [0.34117648, 0.427451  , 0.5176471 ],\n",
+              "          ...,\n",
+              "          [0.31764707, 0.24705884, 0.24705884],\n",
+              "          [0.28627452, 0.21176472, 0.21960786],\n",
+              "          [0.27058825, 0.19607845, 0.20392159]],\n",
+              " \n",
+              "         [[0.27450982, 0.29803923, 0.43137258],\n",
+              "          [0.3137255 , 0.3372549 , 0.46274513],\n",
+              "          [0.3019608 , 0.3372549 , 0.45098042],\n",
+              "          ...,\n",
+              "          [0.32156864, 0.25882354, 0.25882354],\n",
+              "          [0.3019608 , 0.2392157 , 0.2392157 ],\n",
+              "          [0.28627452, 0.22352943, 0.22352943]],\n",
+              " \n",
+              "         [[0.28627452, 0.26666668, 0.42352945],\n",
+              "          [0.32156864, 0.3137255 , 0.4666667 ],\n",
+              "          [0.32941177, 0.32941177, 0.47058827],\n",
+              "          ...,\n",
+              "          [0.30588236, 0.2509804 , 0.24705884],\n",
+              "          [0.29803923, 0.24313727, 0.2392157 ],\n",
+              "          [0.3137255 , 0.25882354, 0.24705884]],\n",
+              " \n",
+              "         ...,\n",
+              " \n",
+              "         [[0.18039216, 0.08627451, 0.14901961],\n",
+              "          [0.18039216, 0.08235294, 0.15686275],\n",
+              "          [0.1764706 , 0.07843138, 0.16078432],\n",
+              "          ...,\n",
+              "          [0.4784314 , 0.47450984, 0.4039216 ],\n",
+              "          [0.44705886, 0.4431373 , 0.37254903],\n",
+              "          [0.43529415, 0.43137258, 0.36078432]],\n",
+              " \n",
+              "         [[0.18431373, 0.07843138, 0.13725491],\n",
+              "          [0.18039216, 0.08627451, 0.14901961],\n",
+              "          [0.1764706 , 0.08235294, 0.14509805],\n",
+              "          ...,\n",
+              "          [0.36862746, 0.3647059 , 0.29411766],\n",
+              "          [0.34117648, 0.34509805, 0.27450982],\n",
+              "          [0.34901962, 0.3529412 , 0.28235295]],\n",
+              " \n",
+              "         [[0.18431373, 0.08235294, 0.13333334],\n",
+              "          [0.19215688, 0.09019608, 0.14117648],\n",
+              "          [0.18431373, 0.09019608, 0.14509805],\n",
+              "          ...,\n",
+              "          [0.5411765 , 0.53333336, 0.47450984],\n",
+              "          [0.5294118 , 0.53333336, 0.47058827],\n",
+              "          [0.5568628 , 0.56078434, 0.49803925]]]], dtype=float32),\n",
+              " (224, 224, 3))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 38
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "images[7].shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ujros-A6pJ15",
+        "outputId": "1efa5ca3-a274-458a-c173-c4bfa972153b"
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(224, 224, 3)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 40
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# View the first batch of labels\n",
+        "labels"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "i-TN8uY3pSip",
+        "outputId": "b423ea9e-34b6-444a-d000-85c76cfb8226"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0., 1., 1., 0., 1., 0., 1., 1., 0., 1., 0., 0., 1., 1., 1., 0., 0.,\n",
+              "       0., 0., 1., 1., 1., 0., 0., 0., 0., 1., 1., 0., 1., 0., 1.],\n",
+              "      dtype=float32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 41
         }
       ]
     }
