--- a/03_introduction_to_computer_vision_wtih_tensorflow.ipynb
+++ b/03_introduction_to_computer_vision_wtih_tensorflow.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNwN217FmvRjdYphhYvCaSP"
+      "authorship_tag": "ABX9TyNUHmlUsCzPTYJhOxuPHlUp"
     },
     "kernelspec": {
       "name": "python3",
@@ -1867,6 +1867,56 @@
           "execution_count": 41
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 3. Create a CNN model (start with a baseline)\n",
+        "\n",
+        "A baseline is a relatively simple model or existing result that you setup when beginning a machine learning experiment and then as you keep experimenting, you try to beat the baseline.\n",
+        "\n",
+        "> 🔑 **Note:** In deep learning, there is almost an infinite amount of architectures you could create. So one of the best ways to get started is to start with something simple and see if it works on your data and then introduce complexity as required (e.g. look at which current model is performing best in the field for your problem)"
+      ],
+      "metadata": {
+        "id": "x01RtTGwqQX4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Make the creating of our model a little easier\n",
+        "from tensorflow.keras.optimizers import Adam\n",
+        "from tensorflow.keras.layers import Dense, Flatten, Conv2D, MaxPool2D, Activation\n",
+        "from tensorflow.keras import Sequential"
+      ],
+      "metadata": {
+        "id": "9K_ZQS-Gq2s5"
+      },
+      "execution_count": 43,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create the model (this will be our baseline, a layer convolutional neural network)\n",
+        "model_3 = Sequential([\n",
+        "    Conv2D(filters=10,\n",
+        "           kernel_size=3,\n",
+        "           strides=1,\n",
+        "           padding=\"valid\",\n",
+        "           activation=\"relu\",\n",
+        "           input_shape=(224, 224, 3)), # input layer (specify input shape)\n",
+        "    Conv2D(10, 3, activation=\"relu\"),\n",
+        "    Conv2D(10, 3, activation=\"relu\"),\n",
+        "    Flatten(),\n",
+        "    Dense(1, activation=\"sigmoid\") # output layer (working with binary classification so only 1 output neuron)\n",
+        "])"
+      ],
+      "metadata": {
+        "id": "BLdv1ixzrdb6"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
