looking inside a Conv2D layer part5 (119)

--- a/03_introduction_to_computer_vision_wtih_tensorflow.ipynb
+++ b/03_introduction_to_computer_vision_wtih_tensorflow.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNUHmlUsCzPTYJhOxuPHlUp"
+      "authorship_tag": "ABX9TyO3GuHy3g0OJENqoGpabOlJ"
     },
     "kernelspec": {
       "name": "python3",
@@ -1900,10 +1900,10 @@
       "source": [
         "# Create the model (this will be our baseline, a layer convolutional neural network)\n",
         "model_3 = Sequential([\n",
-        "    Conv2D(filters=10,\n",
-        "           kernel_size=3,\n",
-        "           strides=1,\n",
-        "           padding=\"valid\",\n",
+        "    Conv2D(filters=10, # filter is the number of sliding windows going across an input (higher = more complex model)\n",
+        "           kernel_size=3, # the size of the sliding window going across an input\n",
+        "           strides=1, # the size of the step the sliding window takes across an input\n",
+        "           padding=\"same\", # if \"same\", output shape is same as input shape, if \"valid\",  output shape gets compresses\n",
         "           activation=\"relu\",\n",
         "           input_shape=(224, 224, 3)), # input layer (specify input shape)\n",
         "    Conv2D(10, 3, activation=\"relu\"),\n",
@@ -1913,10 +1913,33 @@
         "])"
       ],
       "metadata": {
-        "id": "BLdv1ixzrdb6"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BLdv1ixzrdb6",
+        "outputId": "85d31ae4-a19a-4be6-b8f2-2f30761daa99"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.11/dist-packages/keras/src/layers/convolutional/base_conv.py:107: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+            "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "⚒ **Practice:** Understand what's going on in a Conv2D layer by going through the CNN explainer website for 10-20 minutes:\n",
+        "https://poloclub.github.io/cnn-explainer"
+      ],
+      "metadata": {
+        "id": "bje_vds7zdtG"
+      }
     }
   ]
 }
