--- a/03_introduction_to_computer_vision_wtih_tensorflow.ipynb
+++ b/03_introduction_to_computer_vision_wtih_tensorflow.ipynb
@@ -2306,11 +2306,11 @@
         "])"
       ],
       "metadata": {
-        "id": "24QkpOoK1GKI",
-        "outputId": "e7335eae-8cd8-45ee-b675-bb6fb4eb12d5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "24QkpOoK1GKI",
+        "outputId": "e7335eae-8cd8-45ee-b675-bb6fb4eb12d5"
       },
       "execution_count": 42,
       "outputs": [
@@ -2349,11 +2349,11 @@
         "                        validation_steps=len(valid_data))"
       ],
       "metadata": {
-        "id": "An3d0y-a4uFP",
-        "outputId": "ac474a15-483b-428c-ce12-fb109a37e815",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "An3d0y-a4uFP",
+        "outputId": "ac474a15-483b-428c-ce12-fb109a37e815"
       },
       "execution_count": 44,
       "outputs": [
@@ -2382,12 +2382,12 @@
         "model_5.summary()"
       ],
       "metadata": {
-        "id": "rxBXoekn5NBG",
-        "outputId": "64d5b1c5-1825-45d9-ac0f-f3787bb58514",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 425
-        }
+        },
+        "id": "rxBXoekn5NBG",
+        "outputId": "64d5b1c5-1825-45d9-ac0f-f3787bb58514"
       },
       "execution_count": 45,
       "outputs": [
@@ -2513,12 +2513,12 @@
         "model_4.summary()"
       ],
       "metadata": {
-        "id": "mtz40IE95Y5M",
-        "outputId": "3d08adf1-fbc2-4961-e21e-83aea169b3d4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 323
-        }
+        },
+        "id": "mtz40IE95Y5M",
+        "outputId": "3d08adf1-fbc2-4961-e21e-83aea169b3d4"
       },
       "execution_count": 46,
       "outputs": [
@@ -2633,12 +2633,12 @@
         "plot_loss_curves(history_5)"
       ],
       "metadata": {
-        "id": "6410Xbkz5gej",
-        "outputId": "c734499d-e8dc-4410-82d4-209996e041d6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 927
-        }
+        },
+        "id": "6410Xbkz5gej",
+        "outputId": "c734499d-e8dc-4410-82d4-209996e041d6"
       },
       "execution_count": 47,
       "outputs": [
@@ -2663,6 +2663,52 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Opening our bag of tricks and finding data augmentation\n"
+      ],
+      "metadata": {
+        "id": "r7O0LB6Z6e6h"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create ImageDataGenerator training instance with data augmentation\n",
+        "train_datagen_augmented = ImageDataGenerator(rescale=1/255.,\n",
+        "                                             rotation_range=0.2,\n",
+        "                                             shear_range=0.2,\n",
+        "                                             zoom_range=0.2,\n",
+        "                                             width_shift_range=0.2,\n",
+        "                                             height_shift_range=0.3,\n",
+        "                                             horizontal_flip=True)\n",
+        "\n",
+        "# Create ImageDataGenerator without data augmentation\n",
+        "train_datagen = ImageDataGenerator(rescale=1/255.)\n",
+        "\n",
+        "# Create ImageDataGenerator without data augmentation for the test dataset\n",
+        "test_datagen = ImageDataGenerator(rescale=1/255.)"
+      ],
+      "metadata": {
+        "id": "n-2dJDdg6mF-"
+      },
+      "execution_count": 48,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "> 🤔**Question:** What is data augmentation?\n",
+        "\n",
+        "Data augmentation is the process of altering our training data, leading it to have more diversity and in turn allowing our models to learn more diversity and in turn allowing our models to learn more generalizable (hopefully) patterns. Altering might mean adjusting the rotation of an image, flipping it, cropping it or something similar.\n",
+        "\n",
+        "Let's write some code to visualize data augmentation..."
+      ],
+      "metadata": {
+        "id": "K1BVq1Ph7z0L"
+      }
     }
   ]
 }
