exploring options to improve our model (127)

--- a/03_introduction_to_computer_vision_wtih_tensorflow.ipynb
+++ b/03_introduction_to_computer_vision_wtih_tensorflow.ipynb
@@ -2959,11 +2959,11 @@
         ""
       ],
       "metadata": {
-        "id": "manDWYjME1mY",
-        "outputId": "02b7483e-ec36-4455-a793-4be4838b82fa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "manDWYjME1mY",
+        "outputId": "02b7483e-ec36-4455-a793-4be4838b82fa"
       },
       "execution_count": 52,
       "outputs": [
@@ -3003,11 +3003,11 @@
         "                        validation_steps=len(test_data))"
       ],
       "metadata": {
-        "id": "l3MhZaL5FSUQ",
-        "outputId": "190f75cd-a8f2-4935-b8ce-2d9bedcd7b0a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "l3MhZaL5FSUQ",
+        "outputId": "190f75cd-a8f2-4935-b8ce-2d9bedcd7b0a"
       },
       "execution_count": 53,
       "outputs": [
@@ -3036,12 +3036,12 @@
         "plot_loss_curves(history_7)"
       ],
       "metadata": {
-        "id": "NzRfEfGEGt60",
-        "outputId": "628ba603-fc43-4e71-ab53-32849e9cf306",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 927
-        }
+        },
+        "id": "NzRfEfGEGt60",
+        "outputId": "628ba603-fc43-4e71-ab53-32849e9cf306"
       },
       "execution_count": 54,
       "outputs": [
@@ -3066,6 +3066,35 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "> 🔑 **Note:** When shuffling training data, the model gets exposed to all different kinds of data during training, thus enabling it to learn features across a wide array images (in our case, pizza & steak at the same time instead of just pizza then steak)."
+      ],
+      "metadata": {
+        "id": "Nfc0toW3VPqz"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Repeat until satisfied\n",
+        "\n",
+        "Since we've already beaten our baseline, there are a few things we could try to continue to improve our model:\n",
+        "\n",
+        "* Increase the number of model layers (e.g. add more `Conv2D` '/ `MaxPool2D` layers)\n",
+        "* Increase the number of filters in each convolutional layer (e.g. from 10 to 32 or even 64)\n",
+        "* Train for longer (more epochs)\n",
+        "* Find an ideal learning rate\n",
+        "* Get more data (give the model more opportunities to learn)\n",
+        "* Use **transfer learning** to leverage what another image model has learn and adjust it for our own use case\n",
+        "\n",
+        "> ⚒ **Practice** Recreate the model on the CNN explainer website (same as model_1) and see how it performs on the augmented shuffled training data."
+      ],
+      "metadata": {
+        "id": "lfq3Bw1PVvVh"
+      }
     }
   ]
 }
