milti-class CNN's part2 (132)

--- a/03_introduction_to_computer_vision_wtih_tensorflow.ipynb
+++ b/03_introduction_to_computer_vision_wtih_tensorflow.ipynb
@@ -3603,11 +3603,11 @@
         "zip_ref.close()"
       ],
       "metadata": {
-        "id": "sgHyalniN2ML",
-        "outputId": "8d9d1d3d-45f1-4f89-fc8e-83c0ec25b6aa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "sgHyalniN2ML",
+        "outputId": "8d9d1d3d-45f1-4f89-fc8e-83c0ec25b6aa"
       },
       "execution_count": 79,
       "outputs": [
@@ -3640,11 +3640,11 @@
         "  print(f\"There are {len(dirnames)} directories and {len(filenames)} images in '{dirpath}'.\")"
       ],
       "metadata": {
-        "id": "Zlvk2U_mOW4G",
-        "outputId": "6ddec286-0479-48b8-8ad5-27ca98b8104d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Zlvk2U_mOW4G",
+        "outputId": "6ddec286-0479-48b8-8ad5-27ca98b8104d"
       },
       "execution_count": 80,
       "outputs": [
@@ -3685,11 +3685,11 @@
         "!ls -la 10_food_classes_all_data"
       ],
       "metadata": {
-        "id": "ic7WxGykOdxf",
-        "outputId": "fb242cbb-0663-4c07-e4a1-2230badb045b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ic7WxGykOdxf",
+        "outputId": "fb242cbb-0663-4c07-e4a1-2230badb045b"
       },
       "execution_count": 81,
       "outputs": [
@@ -3730,11 +3730,11 @@
         "print(class_names)"
       ],
       "metadata": {
-        "id": "-HCa6l0oP4IG",
-        "outputId": "843b477a-ad81-49fd-ab3b-b5e3123c8c69",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "-HCa6l0oP4IG",
+        "outputId": "843b477a-ad81-49fd-ab3b-b5e3123c8c69"
       },
       "execution_count": 83,
       "outputs": [
@@ -3758,12 +3758,12 @@
         "                                     target_class=random.choice(class_names))"
       ],
       "metadata": {
-        "id": "A1aZQhtLPqzt",
-        "outputId": "8918d886-af64-4bb2-e17a-c1e5f195f8ad",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 463
-        }
+        },
+        "id": "A1aZQhtLPqzt",
+        "outputId": "8918d886-af64-4bb2-e17a-c1e5f195f8ad"
       },
       "execution_count": 124,
       "outputs": [
@@ -3794,6 +3794,56 @@
       ],
       "metadata": {
         "id": "lu4_oaj2RYbO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+        "\n",
+        "# Rescale\n",
+        "train_datagen = ImageDataGenerator(rescale=1/255.)\n",
+        "test_datagen = ImageDataGenerator(rescale=1/255.)\n",
+        "\n",
+        "# Load data in from directoreis and turn it into batches\n",
+        "train_data = train_datagen.flow_from_directory(train_dir,\n",
+        "                                               target_size=(224, 224),\n",
+        "                                               batch_size=32,\n",
+        "                                               class_mode=\"categorical\")\n",
+        "\n",
+        "test_data = test_datagen.flow_from_directory(test_dir,\n",
+        "                                             target_size=(224, 224),\n",
+        "                                             batch_size=32,\n",
+        "                                             class_mode=\"categorical\")"
+      ],
+      "metadata": {
+        "id": "bg519X7VTT4L",
+        "outputId": "1de16cae-f3e6-46b0-ac9c-fe1f7f59960a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 125,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Found 7500 images belonging to 10 classes.\n",
+            "Found 2500 images belonging to 10 classes.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 3. Create a model (start with a baseline)\n",
+        "\n",
+        "We've been talking a lot about the CNN explainer website... how about we just take their model (also on 10 classes) and use it for our problem...?"
+      ],
+      "metadata": {
+        "id": "BlIwtSm3VmHg"
       }
     }
   ]
